--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start-static": "node static-server.js",
     "start-signaling": "node signalingServer.js",
-    "pm2": "pm2 start npm --name webrtc-static -- run start-static && pm2 start npm --name webrtc-signaling -- run start-signaling",
+    "start": "pm2 start npm --name webrtc-static -- run start-static && pm2 start npm --name webrtc-signaling -- run start-signaling",
     "stop": "pm2 del webrtc-static && pm2 del webrtc-signaling"
   },
   "keywords": [],
